# scryrs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  docker-compose.yml  install.sh  package-lock.json  package.json  scryrs.json
.cargo/: config.toml
.cargo-docker/: .global-cache
.claude/: agents  extensions  prompts  settings.json
.devagent/: .gitignore  README.md
.devagent/architecture/: likec4.config.json  model.c4  spec.c4  views.c4
.devagent/docs/: .gitignore  package-lock.json  package.json  rspress.config.ts  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  hook-ci.yml  release.yml
.pi/: .swarm-pi-manifest.json  README.md  package.json  settings.json
.pi/agents/: swarm-architect.md  swarm-lead-dev.md  swarm-productowner.md  swarm-reviewer.md  swarm-room-controller.md  swarm-spec-writer.md  swarm-worker.md
.pi/config/: agents.yaml
.pi/extensions/: README.md
.pi/prompts/: investigate-swarm-run.md  investigate.md  opsx-apply.md  opsx-archive-auto.md  opsx-archive-nonterminal.md  opsx-code-review.md  opsx-explore.md  opsx-fix-review-findings.md  opsx-propose.md  opsx-refinement-explore.md  opsx-validate.md  swarm-architecture-review.md  swarm-execute-plan.md  swarm-execute-task.md  swarm-get-feedback.md  swarm-lead-dev-review.md  (+5 more)
crates/scryrs-adapter-markdown/: Cargo.toml
crates/scryrs-adapter-markdown/src/: lib.rs
crates/scryrs-adapter-rspress/: Cargo.toml
crates/scryrs-adapter-rspress/examples/: verify-publish.rs
crates/scryrs-adapter-rspress/src/: lib.rs
crates/scryrs-adapter-rspress/tests/: verify_publish.rs
crates/scryrs-cli/: Cargo.toml
crates/scryrs-cli/src/: chrono.rs  dashboard.rs  dispatch.rs  dispatch_tests.rs  doctor.rs  graph.rs  help_json.rs  help_text.rs  hook.rs  hook_tests.rs  hotspot_integration_tests.rs  hotspots.rs  init.rs  init_prompt.rs  init_tests.rs  lib.rs  live_bootstrap.rs  main.rs  proposals.rs  proposals_tests.rs  propose.rs  publish.rs  publish_tests.rs  record.rs  record_tests.rs  remote_config.rs  remote_submit.rs  route.rs  route_explain.rs  server.rs  setup.rs  setup_tests.rs  smoke_tests.rs  store_override.rs  test_support.rs  up.rs  up_tests.rs
crates/scryrs-cli/src/snapshots/: scryrs_cli__dispatch_tests__help_flag_prints_help_and_exits_0.snap  scryrs_cli__dispatch_tests__help_json_flag_outputs_valid_json_and_exits_0.snap  scryrs_cli__dispatch_tests__help_json_flag_outputs_valid_json_and_exits_0.snap.new  scryrs_cli__tests__help_flag_prints_help_and_exits_0.snap  scryrs_cli__tests__help_json_flag_outputs_valid_json_and_exits_0.snap
crates/scryrs-cli/src/tests/snapshots/: scryrs_cli__dispatch_tests__help_flag_prints_help_and_exits_0.snap.new  scryrs_cli__dispatch_tests__help_json_flag_outputs_valid_json_and_exits_0.snap.new
crates/scryrs-cli/tests/: dashboard_e2e.rs  doctor_e2e.rs  hotspot_e2e.rs  record_debug_e2e.rs
crates/scryrs-cli/tests/snapshots/: hotspot_e2e__hotspot_artifact.snap  hotspot_e2e__hotspot_empty_stdout.snap  hotspot_e2e__hotspot_stdout.snap
crates/scryrs-core/: Cargo.toml
crates/scryrs-core/src/: ingestion.rs  lib.rs  query.rs  scoring.rs  store.rs
crates/scryrs-curator-llm/: Cargo.toml
crates/scryrs-curator-llm/src/: lib.rs
crates/scryrs-dashboard/: Cargo.toml  build.rs
crates/scryrs-dashboard/frontend/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
crates/scryrs-dashboard/frontend/src/: App.vue  env.d.ts  lucide-vue.d.ts  main.ts
crates/scryrs-dashboard/frontend/src/app/: styles.css
crates/scryrs-dashboard/frontend/src/components/: HeroCard.vue
crates/scryrs-dashboard/frontend/src/router/: index.ts
crates/scryrs-dashboard/frontend/src/shared/api/: client.ts
crates/scryrs-dashboard/frontend/src/shared/lib/: dashboard-mode.test.ts  dashboard-mode.ts  ignition.ts  subject.test.ts  subject.ts  viz.ts
crates/scryrs-dashboard/frontend/src/shared/ui/: index.ts
crates/scryrs-dashboard/frontend/src/shared/ui/alert/: Alert.vue
crates/scryrs-dashboard/frontend/src/shared/ui/badge/: Badge.vue
crates/scryrs-dashboard/frontend/src/shared/ui/button/: Button.vue
crates/scryrs-dashboard/frontend/src/shared/ui/card/: Card.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
crates/scryrs-dashboard/frontend/src/shared/ui/empty/: EmptyState.vue
crates/scryrs-dashboard/frontend/src/shared/ui/icon/: IconActivity.vue  IconFlame.vue  IconInfo.vue  IconListTree.vue  index.ts
crates/scryrs-dashboard/frontend/src/shared/ui/select/: SelectInput.vue  index.ts
crates/scryrs-dashboard/frontend/src/shared/ui/shell/: DashboardShell.vue
crates/scryrs-dashboard/frontend/src/shared/ui/table/: Table.vue
crates/scryrs-dashboard/frontend/src/shared/ui/viz/: ConstellationGraph.vue  EventSparkline.vue  EventTypeBar.vue  FlameIndicator.vue  OutcomePulse.vue  index.ts
crates/scryrs-dashboard/frontend/src/stores/: events.ts  hotspots.test.ts  hotspots.ts  meta.ts  sessions.ts  signals.test.ts  signals.ts
crates/scryrs-dashboard/frontend/src/views/: AboutView.vue  EventsView.vue  HotspotsView.vue  NotFoundView.vue  SessionDetailView.vue  SessionsView.vue  SignalRow.vue  SignalsView.vue  SubjectDetailView.vue
crates/scryrs-dashboard/src/: lib.rs  server.rs
crates/scryrs-dashboard/tests/: api.rs
crates/scryrs-server/: Cargo.toml
crates/scryrs-server/src/: lib.rs  server.rs  store.rs  time.rs
crates/scryrs-types/: Cargo.toml
crates/scryrs-types/src/: lib.rs
scripts/: .versions  audit-dashboard  build-verifier-image  callgraph-go  check  coverage-go-verify  depcruise-dashboard  fallow-dashboard  format-go  hook-test  hook-test-runner.mjs  install  install-hooks  lint-dashboard  lint-go  outdated-go  precommit-run  repair-workspace-permissions  security  test  test-go-race  test-verifier-image  verification-cache  verify-core-artifact-loop  verify-docs-publish  verify-install  verify-live-hotspots  verify-privacy-defaults  verify-production-suite  verify-trace-capture  vuln-go
xtask/: Cargo.toml
(+625 files in other folders)
