[workspace]
resolver = "3"
members = [
  "crates/scryrs-adapter-harness",
  "crates/scryrs-adapter-markdown",
  "crates/scryrs-adapter-rspress",
  "crates/scryrs-cli",
  "crates/scryrs-core",
  "crates/scryrs-curator",
  "crates/scryrs-dashboard",
  "crates/scryrs-graph",
  "crates/scryrs-llm",
  "crates/scryrs-policy",
  "crates/scryrs-runtime",
  "crates/scryrs-sandbox",
  "crates/scryrs-server",
  "crates/scryrs-telemetry",
  "crates/scryrs-types",
  "xtask",
]
default-members = ["crates/scryrs-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matthijsrademaker/scryrs"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
non_ascii_idents = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"
undocumented_unsafe_blocks = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.dependencies]
clap = { version = "4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
scryrs-adapter-harness = { path = "crates/scryrs-adapter-harness" }
scryrs-adapter-markdown = { path = "crates/scryrs-adapter-markdown" }
scryrs-adapter-rspress = { path = "crates/scryrs-adapter-rspress" }
scryrs-core = { path = "crates/scryrs-core" }
scryrs-curator = { path = "crates/scryrs-curator" }
scryrs-dashboard = { path = "crates/scryrs-dashboard" }
scryrs-graph = { path = "crates/scryrs-graph" }
scryrs-llm = { path = "crates/scryrs-llm" }
scryrs-policy = { path = "crates/scryrs-policy" }
scryrs-runtime = { path = "crates/scryrs-runtime" }
scryrs-sandbox = { path = "crates/scryrs-sandbox" }
scryrs-server = { path = "crates/scryrs-server" }
scryrs-telemetry = { path = "crates/scryrs-telemetry" }
scryrs-types = { path = "crates/scryrs-types" }
