[package]
name = "scryrs-adapter-markdown"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
scryrs-types.workspace = true

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
