[package]
name = "scryrs-adapter-rspress"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scryrs-adapter-markdown.workspace = true
scryrs-types.workspace = true
serde_json.workspace = true
tempfile = "3"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
