[package]
name = "scryrs-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scryrs-types.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
