[package]
name = "scryrs-curator-llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scryrs-types.workspace = true
scryrs-llm.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true
