[package]
name = "scryrs-dashboard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
axum = { version = "0.7" }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
  "stream",
] }
rusqlite = { version = "0.31", features = ["bundled"] }
rust-embed = "8"
scryrs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
bytes = "1"
futures-util = "0.3"
scryrs-core = { workspace = true }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
