[package]
name = "scryrs-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
scryrs-types = { workspace = true }
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
