[package]
name = "scryrs-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true
